Shifted chromeCastInfo comms to use Web Sockets to reduce HTTP(s) connection overhead. Fixed minor HTML cosmetic bugs.

--- a/webapps/slinger/css/player_styles.css
+++ b/webapps/slinger/css/player_styles.css
@@ -185,6 +185,10 @@ a:hover, a:focus {
     vertical-align:top;
 }
 
+#FileNavTable {
+    background: white;
+}
+
 /* --------------------------------------------- */
 
 #playerView {
@@ -301,7 +305,9 @@ a:hover, a:focus {
 /* --------------------------------------------- */
 
 #songRangeHeader {
-    font-size:10px;
+    font-size:12px;
+    font-family: monospace;
+    font-weight: bold;
     text-wrap: nowrap;
     text-align: left;
 }
@@ -312,9 +318,12 @@ a:hover, a:focus {
 }
 
 #songRangeFooter {
-    font-size:10px;
+    font-size:12px;
+    font-family: monospace;
+    font-weight: bold;
     text-wrap: nowrap;
-    text-align: left;
+    text-align: right;
+    padding-left: 5px;
 }
 
 /* --------------------------------------------- */
